syntax = "proto3";

import "src/proto/entities/shared/phone_number.proto";
import "src/proto/entities/communication/message_entity.proto";
import "src/proto/entities/shared/empty_value.proto";
import "src/proto/entities/shared/public_access_token_response.proto";

package communicationService;

service CommunicationService {
    rpc GeneratePublicAccessToken(EmptyValue) returns (GeneratePublicAccessTokenResponse) {}
    // Message service
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
    rpc MessageUnitBalance(EmptyValue) returns (MessageUnitBalanceResponse) {}
    rpc MessageDlrReport(MessageDlrReportRequest) returns (MessageDlrReportResponse) {}
}

// SendMessage messages
message SendMessageRequest {
    repeated PhoneNumber phoneNumbers = 1;
    string message = 2;
}

message SendMessageResponse {
    oneof response {
        MessageSucessResponse success = 1;
        MessageFailureResponse failure = 2;
    }
}

// MessageDlrReport messages
message MessageDlrReportRequest {
    optional string smsId = 1;
    optional string senderId = 2;
    optional string startFrom = 3;
    optional string endTo = 4;
    optional string page = 5;
}
