syntax = "proto3";

import "src/proto/entities/shared/id_params.proto";

message DeleteStatus {
    string message = 1;
    repeated IdParamsList deleted = 2;
    repeated IdParamsList notFound = 3;
    repeated IdParamsList failed = 4;
}