syntax = "proto3";

message GeneratePublicAccessTokenResponse {
    string token = 1;
}