syntax = "proto3";

import "src/proto/entities/shared/id_params.proto";
import "src/proto/entities/shared/phone_number.proto";
import "src/proto/entities/shared/query_params_users.proto";
import "src/proto/entities/shared/delete_status.proto";

import "src/proto/entities/user_entity.proto";

package userService;

service UserService {
    rpc GetUserById(IdParams) returns (UserEntity) {};
    rpc GetMultipleUsers(QueryParamsUsers) returns (UserEntityList) {};
    rpc CreateUser(CreateUserRequest) returns (UserEntity) {};
    rpc UpdateUser(UpdateUserRequest) returns (UserEntity) {};
    rpc DeleteUsers(IdParamsList) returns (DeleteStatus) {};
}

// create-user messages
message CreateUserRequest {
    string firstname = 1;
    string lastname = 2;
    PhoneNumber phoneNumber = 3;
    string email = 4;
    string password = 5;
}

// update-user messages
message UpdateUserRequest {
    string id = 1;
    string firstname = 2;
    string lastname = 3;
}